--- a/SME_UnB/data_reader/templates/data_reader/index.html
+++ b/SME_UnB/data_reader/templates/data_reader/index.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
 {% if transductors_list %}
     <u>
     {% for transductor in transductors_list %}
