--- a/SME_UnB/data_reader/static/data_reader/css/style.css
+++ b/SME_UnB/data_reader/static/data_reader/css/style.css
@@ -1,6 +1,15 @@
-h1 {
+.page-header {
     color: #FCA205;
-    font-family: 'Lobster';
+    font-family: 'Lobster', cursive;
+    padding-top: 10px;
+}
+
+.data-element ul li{
+    font-size: 12pt;
+}
+
+.transductor-list{
+    padding-top: 60px;
 }
 
 body {
