--- a/SME_UnB/data_reader/templates/data_reader/detail.html
+++ b/SME_UnB/data_reader/templates/data_reader/detail.html
@@ -1,31 +1,40 @@
-{% load staticfiles %}
+{% extends 'data_reader/base.html' %}
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Data collection</title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link href="http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="{% static 'data_reader/css/style.css' %}">
-</head>
-<body>
-    <div>
-        <h1>Data Collection</h1>
-    </div>
+{% block title %}
+    <title>Data Record</title>
+{% endblock %}
 
-    <div>
-        {% if data_list %}
-        {% for data in data_list %}
-            <li>{{data.voltage_a}} - {{data.collection_date|date:'Y-m-d H:i:s'}}</li>
-        {% endfor %}
-        {% else %}
-            <p>No data avaiable.</p>
-        {% endif %}
-    </div>
-</body>
-</html>
+{% block body %}
+<div class="page-header">
+  <div class="starter-template">
+    <h1>Data from {{data_list.first.transductor.ip_address}}</h1>
+  </div>
+</div>
+<div class="col-md-6">
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Voltage Phase A</th>
+        <th>Date - Time</th>
+      </tr>
+    </thead>
 
-
-
-
+    {% if data_list %}
+      {% for data in data_list %}
+      <tbody>
+        <tr>
+          <td>{{data.voltage_a}}</td>
+          <td>{{data.collection_date|date:'Y-m-d H:i:s'}}</td>
+        </tr>
+      </tbody>
+      {% endfor %}
+    {% else %}
+      <div class="container">
+        <div class="starter-template">
+          <h1>No data avaiable</h1>
+        </div>
+      </div>
+    {% endif %}
+  </table>
+</div>
+{% endblock %}
