--- a/SME_UnB/data_reader/templates/data_reader/new.html
+++ b/SME_UnB/data_reader/templates/data_reader/new.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1>New Transductor</h1>
+    <h1>Edit Transductor</h1>
     <form method="post" class="post-form">
         {% csrf_token %}
         {{form.as_p}}
