--- a/SME_UnB/data_reader/static/data_reader/css/style.css
+++ b/SME_UnB/data_reader/static/data_reader/css/style.css
@@ -1,7 +1,20 @@
+td {
+    text-align: center;
+}
+
+th {
+    text-align: center;
+}
+
 .page-header {
-    color: #FCA205;
+    color: #4d4d4d;
     font-family: 'Lobster', cursive;
 }
+
+.pagination {
+    display: inline-block;
+}
+
 
 .data-element ul li{
     font-size: 12pt;
