--- a/SME_UnB/data_reader/templates/data_reader/detail.html
+++ b/SME_UnB/data_reader/templates/data_reader/detail.html
@@ -7,28 +7,64 @@
 {% block body %}
   <div class="page-header">
     <div class="starter-template">
-      <h1>Data from {{data_list.first.transductor.ip_address}}</h1>
+      <h1>{{transductor.description.title}}</h1>
     </div>
   </div>
 {% if data_list %}
-  <div class="col-md-6">
-    <table class="table table-striped">
+  <div class="col-md-6" style="text-align: center">
+  {% for data in data_list %}
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">{{ data.collection_date }}</h3>
+      </div>
+
+      <table class="table table-striped">
       <thead>
         <tr>
-          <th>Voltage Phase A</th>
-          <th>Date - Time</th>
+          <th></th>
+          <th>Phase A</th>
+          <th>Phase B</th>
+          <th>Phase C</th>
+          <th>Total</th>
         </tr>
       </thead>
-      {% for data in data_list %}
-        <tbody>
-          <tr>
-            <td>{{data.voltage_a}}</td>
-            <td>{{data.collection_date|date:'Y-m-d H:i:s'}}</td>
-          </tr>
-        </tbody>
-      {% endfor %}
+      <tbody>
+        <tr>
+          <td>Voltage</td>
+          <td>{{ data.voltage_a }}</td>
+          <td>{{ data.voltage_b }}</td>
+          <td>{{ data.voltage_c }}</td>
+        </tr>
+        <tr>
+          <td>Current</td>
+          <td>{{ data.current_a }}</td>
+          <td>{{ data.current_b }}</td>
+          <td>{{ data.current_c }}</td>
+        </tr>
+        <tr>
+          <td>Active Power</td>
+          <td>{{ data.active_power_a }}</td>
+          <td>{{ data.active_power_b }}</td>
+          <td>{{ data.active_power_c }}</td>
+          <td>{{ data.calculate_total_active_power }}</td>
+        </tr>
+        <tr>
+          <td>Reactive Power</td>
+          <td>{{ data.reactive_power_a }}</td>
+          <td>{{ data.reactive_power_b }}</td>
+          <td>{{ data.reactive_power_c }}</td>
+          <td>{{ data.calculate_total_reactive_power }}</td>
+        </tr>
+        <tr>
+          <td>Apparent Power</td>
+          <td>{{ data.calculate_apparent_power_phase_a }}</td>
+          <td>{{ data.calculate_apparent_power_phase_b }}</td>
+          <td>{{ data.calculate_apparent_power_phase_c }}</td>
+        </tr>
+      </tbody>
     </table>
-
+    </div>
+  {% endfor %}
     <div class="pagination">
       <span class="step-links">
         {% if data_list.has_previous %}
