Improve transductor measurements collect

--- a/SME_UnB/data_reader/templates/data_reader/detail.html
+++ b/SME_UnB/data_reader/templates/data_reader/detail.html
@@ -57,9 +57,10 @@
         </tr>
         <tr>
           <td>Apparent Power</td>
-          <td>{{ data.calculate_apparent_power_phase_a }}</td>
-          <td>{{ data.calculate_apparent_power_phase_b }}</td>
-          <td>{{ data.calculate_apparent_power_phase_c }}</td>
+          <td>{{ data.apparent_power_a }}</td>
+          <td>{{ data.apparent_power_b }}</td>
+          <td>{{ data.apparent_power_c }}</td>
+          <td>{{ data.calculate_total_apparent_power }}</td>
         </tr>
       </tbody>
     </table>
