Create new app 'transductor' and remove transductor functions from data_reader app

--- a/SME_UnB/transductor/templates/transductor/new.html
+++ b/SME_UnB/transductor/templates/transductor/new.html
@@ -15,6 +15,6 @@
         {% csrf_token %}
         {{form.as_p}}
         <button type="submit" class="save btn btn-default">Save</button>
-        <a href="{% url 'data_reader:index' %}" class="save btn btn-default">Cancel</button>
+        <a href="{% url 'transductor:index' %}" class="save btn btn-default">Cancel</button>
     </form>
 {% endblock %}
