--- a/SME_UnB/templates/base.html
+++ b/SME_UnB/templates/base.html
@@ -23,7 +23,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="{% url 'data_reader:index'%}">Transductors</a></li>
+                <li><a href="{% url 'transductor:index'%}">Transductors</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
               </ul>
