--- a/SME_UnB/templates/base.html
+++ b/SME_UnB/templates/base.html
@@ -23,19 +23,19 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
+                {% if user.is_authenticated %}
                 <li><a href="{% url 'transductor:index'%}">Transductors</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="{% url 'users:dashboard'%}">Minha Conta</a></li>
+                  <li><a href="{% url 'users:logout'%}">SAIR</a></li>
+                {% else %}
+                <li><a href="{% url 'transductor:index'%}">Transductors</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="{% url 'users:login'%}">Login</a></li>
+                {% endif %}
               </ul>
-              <form class="navbar-form navbar-right">
-                <div class="form-group">
-                  <input type="text" placeholder="Email" class="form-control">
-                </div>
-                <div class="form-group">
-                  <input type="password" placeholder="Password" class="form-control">
-                </div>
-                <button type="submit" class="btn btn-success">Sign in</button>
-              </form>
             </div>
           </div>
         </nav>
@@ -45,4 +45,3 @@
 {% block body %}
 {% endblock %}
 </body>
-
