adding staff atribute to user

--- a/SME_UnB/users/templates/users/dashboard.html
+++ b/SME_UnB/users/templates/users/dashboard.html
@@ -11,7 +11,9 @@
         <ul class="breadcrumb">
             {% block breadcrumb %}
             <li><a href="{% url 'index' %}">HOME</a></li>
-            <li><a href="{% url 'users:logout' %}">Logout</a></li>
+            {% if request.user.is_staff %}
+            <li><a href="{% url 'users:update' %}">EDITAR USUARIO</a></li>
+            {% endif %}
             {% endblock %}
         </ul>
     </div>
