--- a/SME_UnB/users/templates/users/dashboard.html
+++ b/SME_UnB/users/templates/users/dashboard.html
@@ -14,6 +14,8 @@
             {% if request.user.is_staff %}
             <li><a href="{% url 'users:update' %}">EDITAR USUARIO</a></li>
             {% endif %}
+            <li><a href="{% url 'users:logout' %}">Logout</a></li>
+            <li><a href="{% url 'users:register' %}">Registrar</a></li>
             {% endblock %}
         </ul>
     </div>
