edit template implemented

--- a/SME_UnB/users/templates/users/dashboard.html
+++ b/SME_UnB/users/templates/users/dashboard.html
@@ -16,6 +16,8 @@
             {% endif %}
             <li><a href="{% url 'users:logout' %}">Logout</a></li>
             <li><a href="{% url 'users:register' %}">Registrar</a></li>
+            <li><a href="{% url 'users:list_user' %}">Editar Usuarios</a></li>
+
             {% endblock %}
         </ul>
     </div>
