--- a/SME_UnB/users/templates/users/login.html
+++ b/SME_UnB/users/templates/users/login.html
@@ -31,10 +31,10 @@
             {% csrf_token %}
             <h2 class="form-signin-heading">Please sign in</h2>
             <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="user" id="inputEmail" name="email" class="form-control" placeholder="Username" required autofocus>
+            <input type="user" id="inputUsername" name="username" class="form-control" placeholder="Email" required autofocus>
             <label for="inputPassword" class="sr-only">Password</label>
             <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
-          
+
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
           </form>
 
