--- a/SME_UnB/users/templates/users/edit_user.html
+++ b/SME_UnB/users/templates/users/edit_user.html
@@ -11,7 +11,7 @@
 
 
 
-      <h1>Editar novo usuario</h1>
+      <h1>Editar usuario</h1>
       <p2>{{info}}</p2>
 
       <h1> </h1>
@@ -66,7 +66,7 @@
 
         </div>
         <button type="submit" class="btn btn-success" style="width: 520px; height: 50px">Registrar</button>
-        <p><a class="btn btn-primary btn-lg" href="{% url 'users:list_user' %}" role="button" style="width: 520px; height: 50px">Cancelar &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="{% url 'users:list_user_edit' %}" role="button" style="width: 520px; height: 50px">Cancelar &raquo;</a></p>
 
     </form>
 
