--- a/SME_UnB/users/templates/users/edit_user.html
+++ b/SME_UnB/users/templates/users/edit_user.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="form-group">
-            <input type="text" name= "email" placeholder="{{user.email}}" class="form-control">
+            <input type="text" name= "email" placeholder="{{user.username}}" class="form-control">
         </div>
 
 
