--- a/SME_UnB/users/templates/users/delete_user.html
+++ b/SME_UnB/users/templates/users/delete_user.html
@@ -6,7 +6,30 @@
 
 {% block body %}
 
-<div class="jumbotron">
+<div class="flex-align"><!-- começa o flex -->
+    <div class="container span7 text-center col-md-4 col-md-offset-3" style="margin: 0 auto;float: none; border: 3px solid red">
+        <div class="row">
+            <h1>Deletar usuario</h1>
+            <p2>{{info}}</p2>
+
+            <h1> </h1>
+          <form class="col-md-6 configdiv" action="delete" method="post">
+              <p2>{{falha}}</p2>
+
+              {% csrf_token %}
+
+              </div>
+                <button type="submit" class="btn btn-danger" href="{% url 'users:list_user_delete' %}" style="width: 250px; height: 50px">Deletar</button>
+                <h1> </h1>
+              <p><a class="btn btn-primary" href="{% url 'users:list_user_delete' %}" role="button" style="width: 250px; height: 50px">Cancelar</a></p>
+
+          </form>
+        </div>
+    </div>
+</div><!-- termina o flex -->
+
+
+<!--<div class="jumbotron">
   <div class="container">
 
 
@@ -27,7 +50,7 @@
     </form>
 
   </div>
-</div>
+</div>-->
 {% endblock %}
 {% block login %}
 <form class="navbar-form navbar-right" action="login" method="post">
