--- a/SME_UnB/users/templates/users/list_user_edit.html
+++ b/SME_UnB/users/templates/users/list_user_edit.html
@@ -2,10 +2,32 @@
 
 {% block dashboard_content %}
 
-    <h1>Lista de usuarios cadastrados</h>
 
+<div class="margin">
+    <h1 margin: "10px">Lista de usuarios cadastrados:&nbsp;&nbsp;&nbsp;</h>
+</div>
+
+<div class="margin">
+
+    <table class ="table table-bordered">
+        <tr>
+            <th>Primeiro Nome</th>
+            <th>Ultimo Nome</th>
+            <th>Email</th>
+            <th>Editar</th>
+
+        </tr>
         {% for user in users %}
-            <p><a class="btn btn-primary btn-lg" href="{% url 'users:edit_user' user.id %}" role="button" style="width: 1000px; height: 100px">{{user}} &raquo;</a></p>
+        <tr>
+            <td>{{user.first_name}}</td>
+            <td>{{user.last_name}}</td>
+            <td>{{user.email}}</td>
+            <td><a  class="glyphicon glyphicon-pencil" href="{% url 'users:edit_user' user.id %}"></a></td>
+        </tr>
         {% endfor %}
+
+        </tab
+</div>
+
 
 {% endblock %}
