--- a/SME_UnB/users/templates/users/login.html
+++ b/SME_UnB/users/templates/users/login.html
@@ -27,16 +27,6 @@
                 <li><a href="#contact">Contact</a></li>
               </ul>
 
-              <form class="form-signin" method="POST" action="{% url "users:login"%}">
-            {% csrf_token %}
-            <h2 class="form-signin-heading">Log in</h2>
-            <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="user" id="inputUsername" name="username" class="form-control" placeholder="Email" required autofocus>
-            <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
-
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
-          </form>
 
             </div>
           </div>
@@ -44,6 +34,25 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
+
+    <div class="flex-align"><!-- começa o flex -->
+    <div class="container span7 text-center col-md-8 col-md-offset-3" style="margin: 0 auto;float: none; border: 3px solid black">
+        <div class="row">
+         <form class="form-signin" method="POST" action="{% url "users:login"%}" style="margin: 100px">
+             {% csrf_token %}
+             <h2 class="form-signin-heading">Log in</h2>
+             <label for="inputEmail" class="sr-only">Email address</label>
+             <input type="user" id="inputUsername" name="username" class="form-control" placeholder="Email" style = "width: 650px; height: 50px" required autofocus>
+             <label for="inputPassword" class="sr-only">Password</label>
+             <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" style = "width: 650px; height: 50px" required>
+             <h1> </h1>
+             <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
+         </form>
+        </div>
+    </div>
+</div><!-- termina o flex -->
+
+
 {% block body %}
 {% endblock %}
 </body>
