--- a/SME_UnB/users/templates/userRegister/register.html
+++ b/SME_UnB/users/templates/userRegister/register.html
@@ -6,83 +6,85 @@
 
 {% block body %}
 
-<div class="jumbotron">
-  <div class="container">
+    <div class="jumbotron">
+	<div class="container">
 
 
+	    <div class="row">
+		<div class="col-md-6 col-md-offset-3">
 
-      <h1>Registro de novo usuario</h1>
+		    <h1>Registro de novo usuario</h1>
+
+		    <form class="configdiv" action="register" method="post">
+			<p2>{{falha}}</p2>
+
+			{% csrf_token %}
+			<div class="form-group">
+			    <input type="text" name= "first_name" placeholder="Primeiro nome" class="form-control">
+			</div>
+
+			<div class="form-group">
+			    <input type="text" name= "last_name" placeholder="ultimo nome" class="form-control">
+			</div>
+
+			<div class="form-group">
+			    <input type="text" name= "email" placeholder="Email" class="form-control">
+			</div>
 
 
-      <h1> </h1>
-    <form class="col-md-6 configdiv" action="register" method="post">
-        <p2>{{falha}}</p2>
+			<div class="form-group">
+			    <input type="password" name ="password" placeholder="Senha" class="form-control">
+			</div>
 
-        {% csrf_token %}
-        <div class="form-group">
-            <input type="text" name= "first_name" placeholder="Primeiro nome" class="form-control">
-        </div>
+			<div class="form-group">
+			    <input type="password" name ="confirmPassword" placeholder="confirmar senha" class="form-control">
+			</div>
 
-        <div class="form-group">
-            <input type="text" name= "last_name" placeholder="ultimo nome" class="form-control">
-        </div>
+			<p1>Tipo de usuario:</p1>
+			<div class="form-group">
+			    <label class="radio-inline">
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> Usuario Comum
+			    </label>
+			    <label class="radio-inline">
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> Adiministrador
+			    </label>
 
-        <div class="form-group">
-            <input type="text" name= "email" placeholder="Email" class="form-control">
-        </div>
+			</div>
 
+			<p1>Nivel de acesso:</p1>
+			<div class="form-group">
 
-        <div class="form-group">
-            <input type="password" name ="password" placeholder="Senha" class="form-control">
-        </div>
+			    <label class="checkbox-inline checkbox-success">
+				<input type="checkbox" id="inlineCheckbox1" value="option1"> Visualizar Graficos
+			    </label>
+			    <label class="checkbox-inline checkbox-success">
+				<input type="checkbox" id="inlineCheckbox2" value="option2"> Gerar Relatorios
+			    </label>
+			    <label class="checkbox-inline checkbox-success">
+				<input type="checkbox" id="inlineCheckbox3" value="option3"> Depois Penso
+			    </label>
 
-        <div class="form-group">
-            <input type="password" name ="confirmPassword" placeholder="confirmar senha" class="form-control">
-        </div>
+			</div>
 
-        <p1>Tipo de usuario:</p1>
-        <div class="form-group">
-            <label class="radio-inline">
-                <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> Usuario Comum
-            </label>
-            <label class="radio-inline">
-                <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> Adiministrador
-            </label>
+			<button type="submit" class="btn btn-success btn-lg btn-block" >Registrar</button>
 
-        </div>
+		    </form>
 
-        <p1>Nivel de acesso:</p1>
-        <div class="form-group">
-
-            <label class="checkbox-inline checkbox-success">
-                <input type="checkbox" id="inlineCheckbox1" value="option1"> Visualizar Graficos
-            </label>
-            <label class="checkbox-inline checkbox-success">
-                <input type="checkbox" id="inlineCheckbox2" value="option2"> Gerar Relatorios
-            </label>
-            <label class="checkbox-inline checkbox-success">
-                <input type="checkbox" id="inlineCheckbox3" value="option3"> Depois Penso
-            </label>
-
-        </div>
-
-        <button type="submit" class="btn btn-success" style="width: 520px; height: 50px">Registrar</button>
-
-    </form>
-
-  </div>
-</div>
+		</div>
+	    </div>
+	</div>
+    </div>
 {% endblock %}
 {% block login %}
-<form class="navbar-form navbar-right" action="login" method="post">
-    <p2 color="red" >{{falha}}</p2>
-    {% csrf_token %}
-    <div class="form-group">
-        <input type="text" name= "Email" placeholder="Email" class="form-control">
-    </div>
-    <div class="form-group">
-        <input type="password" name ="Password" placeholder="Password" class="form-control">
-    </div>
-    <button type="submit" class="btn btn-success">Sign in</button>
-</form>
+    <form class="navbar-form navbar-right" action="login" method="post">
+	<p2 color="red" >{{falha}}</p2>
+	{% csrf_token %}
+	<div class="form-group">
+	    <input type="text" name= "Email" placeholder="Email" class="form-control">
+	</div>
+	<div class="form-group">
+	    <input type="password" name ="Password" placeholder="Password" class="form-control">
+	</div>
+	<button type="submit" class="btn btn-success">Sign in</button>
+    </form>
 {% endblock %}
