--- a/SME_UnB/users/templates/users/list_user_edit.html
+++ b/SME_UnB/users/templates/users/list_user_edit.html
@@ -4,9 +4,12 @@
 
 
 <div class="margin">
-    <h1 margin: "10px">Lista de usuarios cadastrados:&nbsp;&nbsp;&nbsp;</h>
+    <h1 class="text-center">Lista de usuarios cadastrados:</h>
 </div>
 
+<br />
+    <div class="row">
+	<div class="col-md-8 col-md-offset-2">
 <div class="margin">
 
     <table class ="table table-bordered">
@@ -27,6 +30,8 @@
         {% endfor %}
 
         </tab
+</div>
+</div>
 </div>
 
 
