--- a/SME_UnB/report/templates/graphics/report.html
+++ b/SME_UnB/report/templates/graphics/report.html
@@ -1,54 +1,77 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    <title>Grafico</title>
+    <title>Relatórios</title>
 {% endblock %}
 
 
 {% block body %}
 
 
-<div class="form-group">
-    <h1>Relatorio</h1>
-    <h1> </h1>
-    <a class="btn btn-primary btn-lg" href="{% url 'report:open_pdf' %}" target="_blank" role="button">Gerar pdf &raquo;</a>
-    <h1> </h1>
-</div>
+    <div class="form-group">
+	<h1 class='text-center'>Relatorio</h1>
+	<div class="row">
+	    <div class="col-md-2 col-md-offset-5">
+		<a class="btn btn-primary btn-lg btn-block" href="{% url 'report:open_pdf' %}" target="_blank" role="button">Gerar pdf &raquo;</a>
+	    </div>
+	</div>
+    </div>
 
-<p1>Grafico de Corrente</p1>
-<div class="form-group">
-    {% load staticfiles %}
-    <img src="{% static 'currentGraphic.png' %}"/>
+    <div class="row">
+	<div class="col-xs-6 col-md-3"></div>
+	<div class="col-xs-6 col-md-6">
+	    <div class="form-group">
+		{% load staticfiles %}
+		<img src="{% static 'currentGraphic.png' %}"/>
 
-</div>
+	    </div>
+	</div>
+    </div>
 
-<p1>Grafico de Voltagem</p1>
-<div class="form-group">
-    {% load staticfiles %}
-    <img src="{% static 'voltageGraphic.png' %}"/>
 
-</div>
+    <div class="row">
+	<div class="col-xs-6 col-md-3"></div>
+	<div class="col-xs-6 col-md-6">
+	    <div class="form-group">
+		{% load staticfiles %}
+		<img src="{% static 'voltageGraphic.png' %}"/>
 
-<p1>Grafico de Potencia Ativa</p1>
-<div class="form-group">
-    {% load staticfiles %}
-    <img src="{% static 'activePowerGraphic.png' %}"/>
+	    </div>
+	</div>
+    </div>
 
-</div>
+    <div class="row">
+	<div class="col-xs-6 col-md-3"></div>
+	<div class="col-xs-6 col-md-6">
+	    <div class="form-group">
+		{% load staticfiles %}
+		<img src="{% static 'activePowerGraphic.png' %}"/>
 
-<p1>Grafico de Potencia Reativa</p1>
-<div class="form-group">
-    {% load staticfiles %}
-    <img src="{% static 'reactivePowerGraphic.png' %}"/>
+	    </div>
+	</div>
+    </div>
 
-</div>
+    <div class="row">
+	<div class="col-xs-6 col-md-3"></div>
+	<div class="col-xs-6 col-md-6">
+	    <div class="form-group">
+		{% load staticfiles %}
+		<img src="{% static 'reactivePowerGraphic.png' %}"/>
 
-<p1>Grafico de Potencia Aparente</p1>
-<div class="form-group">
-    {% load staticfiles %}
-    <img src="{% static 'apparentPowerGraphic.png' %}"/>
+	    </div>
+	</div>
+    </div>
 
-</div>
+    <div class="row">
+	<div class="col-xs-6 col-md-3"></div>
+	<div class="col-xs-6 col-md-6">
+	    <div class="form-group">
+		{% load staticfiles %}
+		<img src="{% static 'apparentPowerGraphic.png' %}"/>
+
+	    </div>
+	</div>
+    </div>
 
 
 
