Updating vies and edit_user page
Conflicts:
	SME_UnB/users/views.py

--- a/SME_UnB/users/templates/users/edit_user.html
+++ b/SME_UnB/users/templates/users/edit_user.html
@@ -60,9 +60,15 @@
             <label class="checkbox-inline checkbox-success">
                 <input type="checkbox" id="inlineCheckbox2" value="option2"> Gerar Relatorios
             </label>
-            <label class="checkbox-inline checkbox-success">
-                <input type="checkbox" id="inlineCheckbox3" value="option3"> Depois Penso
+           <label class="checkbox-inline checkbox-success">
+                <input type="checkbox" id="permissions_checkbox3" 
+                 name="edit_users" value="edit_users"> Editar Usuarios
             </label>
+            <label class="checkbox-inline checkbox-success">
+                <input type="checkbox" id="permissions_checkbox3" 
+                 name="deletar_usuarios" value="delete_users"> Deletar Usuarios
+            </label>
+
 
         </div>
         <button type="submit" class="btn btn-success" style="width: 520px; height: 50px">Registrar</button>
