--- a/SME_UnB/users/templates/userRegister/register.html
+++ b/SME_UnB/users/templates/userRegister/register.html
@@ -64,7 +64,22 @@
 				<input type="checkbox" id="inlineCheckbox3" value="option3"> Depois Penso
 			    </label>
 
-			</div>
+            <label class="checkbox-inline checkbox-success">
+                <input type="checkbox" id="permissions_checkbox1" 
+                name="can_generate" value="generate_reports"> Gerar Relatorios
+            </label>
+            <label class="checkbox-inline checkbox-success">
+                <input type="checkbox" id="permissions_checkbox2" 
+                name="view_transductors"value="manage_transductors"> Gerenciar Transdutores
+            </label>
+            <label class="checkbox-inline checkbox-success">
+                <input type="checkbox" id="permissions_checkbox3" 
+                 name="edit_users" value="edit_users"> Editar Usuarios
+            </label>
+            <label class="checkbox-inline checkbox-success">
+                <input type="checkbox" id="permissions_checkbox3" 
+                 name="delete_users" value="delete_users"> Deletar Usuarios
+            </label>
 
 			<button type="submit" class="btn btn-success btn-lg btn-block" >Registrar</button>
 
