Finishing permissions UC
Conflicts:
	SME_UnB/users/templates/users/dashboard.html
	SME_UnB/users/templates/users/delete_user.html

--- a/SME_UnB/users/templates/users/dashboard.html
+++ b/SME_UnB/users/templates/users/dashboard.html
@@ -19,8 +19,14 @@
             {% endif %}
             <li><a href="{% url 'users:logout' %}">Logout</a></li>
             <li><a href="{% url 'users:register' %}">Registrar</a></li>
+            
+            {%if perms.users.can_edit_user%}
             <li><a href="{% url 'users:list_user_edit' %}">Editar Usuarios</a></li>
+            {%endif%}
+            
+            {%if perms.user.can_delete_user%}
             <li><a href="{% url 'users:list_user_delete' %}">Deletar Usuarios</a></li>
+            {%endif%}
 
             {% endblock %}
         </ul>
