--- a/SME_UnB/users/templates/userRegister/register.html
+++ b/SME_UnB/users/templates/userRegister/register.html
@@ -65,20 +65,16 @@
 			    </label>
 
             <label class="checkbox-inline checkbox-success">
-                <input type="checkbox" id="permissions_checkbox1" 
-                name="can_generate" value="generate_reports"> Gerar Relatorios
+                <input type="checkbox" id="permissions_checkbox1" name="can_generate" > Gerar Relatorios
             </label>
             <label class="checkbox-inline checkbox-success">
-                <input type="checkbox" id="permissions_checkbox2" 
-                name="view_transductors"value="manage_transductors"> Gerenciar Transdutores
+                <input type="checkbox" id="permissions_checkbox2" name="view_transductors"> Gerenciar Transdutores
             </label>
             <label class="checkbox-inline checkbox-success">
-                <input type="checkbox" id="permissions_checkbox3" 
-                 name="edit_users" value="edit_users"> Editar Usuarios
+                <input type="checkbox" id="permissions_checkbox3" name="edit_users" > Editar Usuarios
             </label>
             <label class="checkbox-inline checkbox-success">
-                <input type="checkbox" id="permissions_checkbox3" 
-                 name="delete_users" value="delete_users"> Deletar Usuarios
+                <input type="checkbox" id="permissions_checkbox3" name="delete_users"> Deletar Usuarios
             </label>
 
 			<button type="submit" class="btn btn-success btn-lg btn-block" >Registrar</button>
