Fixing and review some bugs
Conflicts:
	SME_UnB/users/templates/userRegister/register.html
	SME_UnB/users/views.py

--- a/SME_UnB/users/templates/users/edit_user.html
+++ b/SME_UnB/users/templates/users/edit_user.html
@@ -55,18 +55,16 @@
         <div class="form-group">
 
             <label class="checkbox-inline checkbox-success">
-                <input type="checkbox" id="inlineCheckbox1" value="option1"> Visualizar Graficos
+                <input type="checkbox" id="permissions_checkbox1" name="can_generate" > Gerar Relatorios
             </label>
             <label class="checkbox-inline checkbox-success">
-                <input type="checkbox" id="inlineCheckbox2" value="option2"> Gerar Relatorios
+                <input type="checkbox" id="permissions_checkbox2" name="view_transductors"> Gerenciar Transdutores
             </label>
            <label class="checkbox-inline checkbox-success">
-                <input type="checkbox" id="permissions_checkbox3" 
-                 name="edit_users" value="edit_users"> Editar Usuarios
+                <input type="checkbox" id="permissions_checkbox3" name="edit_users" > Editar Usuarios
             </label>
             <label class="checkbox-inline checkbox-success">
-                <input type="checkbox" id="permissions_checkbox3" 
-                 name="deletar_usuarios" value="delete_users"> Deletar Usuarios
+                <input type="checkbox" id="permissions_checkbox3" name="delete_users"> Deletar Usuarios
             </label>
 
 
